# synai-sdk-python

./: .gitignore  LICENSE  README.md  mcp_config_example.json  pyproject.toml
.claude/skills/synai-relay/: SKILL.md
examples/: buyer_agent.py  worker_agent.py
synai_relay/: __init__.py  client.py  mcp_server.py
